--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
 
   </head>
-  <body>
+  <body style="margin-left:50%">
     <main>
     </main>
     <script src="sketch.js"></script>
