--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
 
   </head>
-  <body style="margin-left:40%">
+  <body style="margin-left:35%; magin-top:20%;">
     <main>
     </main>
     <script src="sketch.js"></script>
